fix routes save not working on mobile

--- a/client/src/components/route/route.css
+++ b/client/src/components/route/route.css
@@ -10,7 +10,7 @@
 }
 
 .modal-form-container {
-  width: 600px;
+  max-width: 600px;
 
   position: absolute;
   top: 10%;
